customer-service-request/force-app/main/default/objects/Support_Request__c/Support_Request__c.object-meta.xml
<CustomObject>
    <description>Custom Object that represents a support request submitted by a customer, allowing support teams to track, prioritize, and manage requests throughout their lifecycle.</description>
    <label>Support Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>