customer-service-request/force-app/main/default/objects/Support_Request__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>Date when the support request was closed.</description>
    <inlineHelpText>Date when the support request was closed.</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>