customer-service-request/force-app/main/default/objects/Support_Request__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>Date by which the support request is expected to be resolved.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>