customer-service-request/force-app/main/default/objects/Support_Request__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the contact who submitted the support request.</description>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Requests</relationshipLabel>
    <relationshipName>Support_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>